# MacroTooth

./: .gitignore  CMakeLists.txt
build_ci/: CMakeCache.txt
src/: bluez_profile.cpp  bluez_profile.h  bt_adapter.cpp  bt_adapter.h  bt_agent.cpp  bt_agent.h  config.h  gatt_application.cpp  gatt_application.h  hid_reporter.cpp  hid_reporter.h  ipc_server.cpp  ipc_server.h  logger.h  main.cpp  uhid_device.cpp  uhid_device.h
tests/: CMakeLists.txt  test_bt_adapter.cpp  test_hid_reporter.cpp  test_ipc_server.cpp
